# SRI_Conv

./: LICENSE  README.md  pyproject.toml
src/SRI_Conv/: __init__.py  sri_cnn.py  sri_conv.py  sri_resnet.py  transforms.py  utils.py
src/SRI_Conv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
