[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SRI_Conv"
version = "1.2.0"
authors = [
  { name="Yuexi Du, Nicha Dvornek, John Onofrey", email="yuexi.du@yale.edu" },
]
description = "Official package for 'Symmetric Rotation-Invariant Convolutional Kernel'"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "scipy>=1.9.0",
    "numpy>=1.22.0",
    "torch>=1.8.0"
]

[project.urls]
Homepage = "https://github.com/XYPB/SRI_Conv"
Issue = "https://github.com/XYPB/SRI_Conv/issues"